# RuntimeShield

./: COMPATIBILITY.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: 01_Introduction.md  02_Threat_Model.md  03_Architecture.md  04_Runtime_Protection.md  05_Startup_Verification.md  06_Runtime_Verification.md  07_On_Demand_Verification.md  08_Binary_Integrity.md  09_Merkle_Tree.md  10_Library_Verification.md  11_Process_Identity.md  12_Memory_Integrity.md  13_Anti_Debug.md  14_Policy_Engine.md  15_Event_System.md  16_Cross_Platform_Architecture.md  17_API_Guide.md  18_Examples.md  19_Performance.md  20_Limitations.md  21_Future_Work.md  22_Any_Language_Integration.md
examples/: basic.rs  manifest_gen.rs  on_demand.rs
src/: lib.rs
src/api/: public.rs
src/config/: policy.rs
src/core/: builder.rs  error.rs
src/crypto/: hash.rs  merkle.rs
src/events/: callback.rs  mod.rs
src/integrity/: binary.rs  library.rs  memory.rs  mod.rs
src/monitor/: runtime.rs
src/platform/: mod.rs
src/platform/linux/: debugger.rs  memory.rs  process.rs
src/platform/macos/: debugger.rs  memory.rs  mod.rs  process.rs
src/platform/windows/: mod.rs
src/policy/: engine.rs  mod.rs
src/utils/: paths.rs
tests/: integration.rs  platform_tests.rs
