[package]
name = "runtimeshield"
version = "0.1.0"
description = "Cross-Platform Runtime Protection Framework for Native Applications"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/runtimeshield/runtimeshield"
keywords = ["security", "runtime", "integrity", "protection", "tamper-detection"]
categories = ["security", "os", "rust-patterns"]

[features]
default = []
nightly = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
